fix some spacing for mobile

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -242,7 +242,7 @@ header {
 
 .section-heading {
     margin-top: 0;
-    padding-top: 30px;
+    padding-top: 20px;
     color: $theme-orange;
 }
 
